<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/default_profile"
        android:src="@drawable/berg" />

    <EditText
        android:id="@+id/sign_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/benutzername"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/sign_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_username"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete|textEmailAddress"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/sign_passwort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_Email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/passwort"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileimage_card"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/sign_passwort"
        android:layout_centerInParent="true"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/profileimage"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/defaultavatar"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_signup2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileimage_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up" />


</RelativeLayout>